fix(VToolbar): hide title when using the collapse prop

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -33,6 +33,9 @@
     max-width: $toolbar-collapsed-max-width
     overflow: hidden
 
+    .v-toolbar-title
+      display: none
+
     @include tools.ltr()
       border-bottom-right-radius: $toolbar-collapsed-border-radius
 
